# datalizer-scipy

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: cleaner.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  introduction.rst  loader.rst  modules.rst  preprocessor.rst  usage.rst
docs/source/examples/: example.ipynb  sample_numerical.csv
examples/: example.ipynb  y_train.csv
src/datalizer/: __init__.py  cleaner.py  loader.py  preprocessor.py  utils.py
